@@ -39,29 +39,24 @@ public class TerritoryAttachmentExporter extends DefaultAttachmentExporter
 			return super.printIntegerOption(field, "production", attachment, true);
 		if (fieldName.equals("m_unitProduction")) // don't display unitProduction when production is the same.
 			return mUnitProductionHandler(field, attachment);
-		if (fieldName.equals("m_originalOwner")) // it doesn't matter if we look at m_occupiedTerrOf or m_originalOwner, as they are both the same thing
-			return mOccupiedTerrOfHandler(field, attachment);
-		if (fieldName.equals("m_occupiedTerrOf"))
-			return ""; // we want to skip this, since we already check this when we look ad original owner.
+		if (fieldName.equals("m_originalOwner"))
+			return mOriginalOwnerHandler(field, attachment);
 		return super.printOption(field, attachment);
 	}
 	
-	private String mOccupiedTerrOfHandler(final Field field, final IAttachment attachment)
+	private String mOriginalOwnerHandler(final Field field, final IAttachment attachment)
 	{
 		final TerritoryAttachment att = (TerritoryAttachment) attachment;
-		final PlayerID occupiedTerrOf = att.getOccupiedTerrOf();
-		if (occupiedTerrOf != null)
-			return printDefaultOption("occupiedTerrOf", occupiedTerrOf.getName()); // if we have a specific occupiedTerrOf then use it
-		// otherwise, check to see if someone else has conquered the territory in the mean time. must check for neutrals too. neutrals can be either NULL or PlayerID.NULL_PLAYERID
-		// we only want to add an occupiedTerrOf IF the current owner does not equal the original owner. Since any time they are equal, this is not needed.
+		// check to see if someone else has conquered the territory in the mean time. must check for neutrals too. neutrals can be either NULL or PlayerID.NULL_PLAYERID
+		// we only need to add an originalOwner IF the current owner does not equal the original owner. Since any time they are equal, this is not needed.
 		final PlayerID originalOwner = att.getOriginalOwner();
 		final Territory t = (Territory) att.getAttachedTo();
 		if (originalOwner == null && (t.getOwner() != null && !t.getOwner().equals(PlayerID.NULL_PLAYERID)))
-			return printDefaultOption("occupiedTerrOf", PlayerID.NULL_PLAYERID.getName());
+			return printDefaultOption("originalOwner", PlayerID.NULL_PLAYERID.getName());
 		else if (originalOwner == null)
 			return ""; // must be that original owner and current owner are both null
 		if (!originalOwner.equals(t.getOwner()))
-			return printDefaultOption("occupiedTerrOf", originalOwner.getName());
+			return printDefaultOption("originalOwner", originalOwner.getName());
 		return "";
 	}
 	
